引用元表示　Unity.html
引用元表示しました

--- a/unity.html
+++ b/unity.html
@@ -21,6 +21,9 @@ Unityで開発したゲームは、Windows、Mac、Linuxなどのデスクトッ
 <n>Unity誕生のおかげで、初心者には向かないとされていたゲーム開発もハードルが低くなりました。<br>
 これを見ているあなたもぜひUnityをダウンロードしてゲームを一つ作ってみてください。
 </n>
+<h6>参考ページ（○写しとも言う）
+http://www.sejuku.net/blog/6616#i
+</h6>
 </article>
 	<footer>
 		Copyright &copy;karasi, all rights reserved.
